Fix photo layout issues

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -62,3 +62,13 @@ a {
 whitespace-nowrap {
   white-space: nowrap;
 }
+
+.flex-col {
+  display: flex;
+  flex-direction: column;
+}
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+}
